--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "Core/Lib/stmlibs"]
-	path = Core/Lib/stmlibs
+[submodule "Lib/stmlibs"]
+	path = Lib/stmlibs
 	url = https://github.com/squadracorsepolito/stmlibs.git
-[submodule "Core/Lib/L9963_lib"]
-	path = Core/Lib/L9963_lib
-	url = https://github.com/squadracorsepolito/L9963E_lib.git
+[submodule "Lib/L9963E_lib"]
+	path = Lib/L9963E_lib
+	url = https://github.com/squadracorsepolito/L9963E_lib
