chore: modify makefile and include custom vscode

--- a/STM32-for-VSCode.config.yaml
+++ b/STM32-for-VSCode.config.yaml
@@ -100,8 +100,11 @@ suppressMakefileWarning: false
 # Here custom makefile rules can be added to the STM32Make.make file
 # an example of how this can be used is commented out below.
 customMakefileRules:
-- command: srec_output
-  rule: "bin2srec -a $$(grep 'FLASH (rx)      : ORIGIN =' STM32F446RETx_FLASH_shifted.ld | awk '{print $$6}' | sed 's/.$$//') -i $(BUILD_DIR)/$(TARGET)_shifted.bin -o $(BUILD_DIR)/$(TARGET)_shifted.srec"
+- command: can_build
+  rule: ""
+  dependsOn: $(BUILD_DIR)/$(TARGET)_shifted.sx
+- command: $(BUILD_DIR)/$(TARGET)_shifted.sx
+  rule: "bin2srec -a $$(grep 'FLASH (rx)      : ORIGIN =' STM32F446RETx_FLASH_shifted.ld | awk '{print $$6}' | sed 's/.$$//') -i $(BUILD_DIR)/$(TARGET)_shifted.bin -o $(BUILD_DIR)/$(TARGET)_shifted.sx"
   dependsOn: $(BUILD_DIR)/$(TARGET)_shifted.bin # can be left out    
 - command: $(BUILD_DIR)/$(TARGET)_shifted.elf
   rule: "$(CC) $(OBJECTS) $(MCU) $(ADDITIONALLDFLAGS) -TSTM32F446RETx_FLASH_shifted.ld $(LIBDIR) $(LIBS) -Wl,-Map=$(BUILD_DIR)/$(TARGET).map,--cref -Wl,--gc-sections -o $@"
@@ -109,6 +112,9 @@ customMakefileRules:
 - command: $(BUILD_DIR)/$(TARGET)_shifted.bin
   rule: $(BIN) $< $@
   dependsOn: $(BUILD_DIR)/$(TARGET)_shifted.elf | $(BUILD_DIR)
+- command: can_flash
+  rule: "bootcommander -t=xcp_can -d=can0 -b=1000000 -tid=7h -rid=181h $(BUILD_DIR)/$(TARGET)_shifted.sx"
+  dependsOn: $(BUILD_DIR)/$(TARGET)_shifted.sx
 
 
 
